--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <img class="Logo" src="logo.png" alt="Logo"/>
              <ul>
-                 <li><a href="#">ABOUT</a></li>
+                 <li><a href="ab.html">ABOUT</a></li>
                  <li><a href="#">CV</a></li>
                  <li><a href="#">SERVICES</a></li>
                 <li><a href="ph.html">PORTOFOLIO</a></li>
